--- a/style.css
+++ b/style.css
@@ -4,3 +4,31 @@ body{
     padding: 0%;
     font-family: 'Poppins', sans-serif;
 }
+header{
+     background: #264653;
+   color: white;
+}
+h1{
+   font-size: 48px;
+   font-weight: 600;
+   line-height: 72px;
+   margin-top: 0px;
+}
+#header-left-side p{
+    font-size: 16px;
+    line-height: 24px;
+}
+#image-1,#image-3{
+    filter: grayscale(90%);
+}
+
+
+@media screen and (max-width:425px) and (min-width:320px) {
+    #header-left-side h1{
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 54px;
+        margin-top: 0px;
+     }
+    
+}
