--- a/style.css
+++ b/style.css
@@ -20,9 +20,13 @@ h1{
     line-height: 24px;
 }
 #image-1,#image-3{
-    filter: grayscale(90%);
+    filter: grayscale(100%);
 }
-
+.img-3{
+    border-radius: 50%;
+    width: 149px;
+    height: 149px;
+}
 
 
 @media screen and (max-width:425px) and (min-width:320px) {
