--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Style+Script&display=swap');
 body{
     margin: 0%;
     padding: 0%;
     font-family: 'Poppins', sans-serif;
+   
 }
 header{
      background: #264653;
@@ -22,11 +23,7 @@ h1{
 #image-1,#image-3{
     filter: grayscale(100%);
 }
-.img-3{
-    border-radius: 50%;
-    width: 149px;
-    height: 149px;
-}
+
 
 
 @media screen and (max-width:425px) and (min-width:320px) {
@@ -35,6 +32,15 @@ h1{
         font-weight: 600;
         line-height: 54px;
         margin-top: 0px;
+     }
+     #first-extra-sec-title{
+         font-size: 30px;
+     }
+     #xblade-right-side{
+         order:1;
+     }
+     #leftarea-image{
+         order: 2;
      }
     
 }
