--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1{
    line-height: 72px;
    margin-top: 0px;
 }
-#header-left-side p{
+ p{
     font-size: 16px;
     line-height: 24px;
 }
@@ -27,20 +27,16 @@ h1{
 
 
 @media screen and (max-width:425px) and (min-width:320px) {
-    #header-left-side h1{
-        font-size: 30px;
-        font-weight: 600;
-        line-height: 54px;
-        margin-top: 0px;
-     }
-     #first-extra-sec-title{
-         font-size: 30px;
-     }
+   
      #xblade-right-side{
          order:1;
      }
      #leftarea-image{
          order: 2;
+     } 
+     h1{
+         font-size: 35px;
+         line-height: 40px;
      }
     
 }
